# liveview

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  README.rst  apps.py  consumers.py  pyproject.toml  requirements.txt  setup.py  toot.txt
.github/workflows/: python-publish.yml
django_liveview/: __init__.py  apps.py  connections.py  consumers.py  decorators.py  routing.py
django_liveview/static/django_liveview/: liveview.js  liveview.min.js
docs/: CONTRIBUTING.md  QUICKSTART.md
frontend/: main.js  package.json  rollup.config.js  webSocketsCli.js
frontend/controllers/: page_controller.js
frontend/mixins/: miscellaneous.js
liveview/: __init__.py  apps.py  consumers.py  decorators.py  models.py  routing.py  utils.py
liveview/migrations/: 0001_initial.py
liveview/static/liveview/: liveview.js  liveview.min.js
liveview/templatetags/: __init__.py  liveview.py
