[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-liveview"
version = "2.1.2"
description = "Real-time server-rendered interfaces for Django using WebSockets"
readme = "README.md"
authors = [
    {name = "Andros Fenollosa", email = "andros@fenollosa.email"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "liveview", "websockets", "realtime", "stimulus", "channels"]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tanrax/django-liveview"
Documentation = "https://github.com/tanrax/django-liveview#readme"
Repository = "https://github.com/tanrax/django-liveview"
Issues = "https://github.com/tanrax/django-liveview/issues"

[tool.setuptools]
packages = ["liveview"]
include-package-data = true

[tool.setuptools.package-data]
liveview = [
    "static/liveview/*.js",
    "static/liveview/*.map",
    "templates/liveview/*.html",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
